--- a/app/src/main/res/layout/fragment_saving_tips.xml
+++ b/app/src/main/res/layout/fragment_saving_tips.xml
@@ -1,195 +1,201 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/Background"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#E5E5E5"
-    tools:context=".savingTips">
-
-    <!-- TODO: Update blank fragment layout -->
-
-    <TextView
-        android:id="@+id/savingTipID"
-        android:layout_width="221dp"
-        android:layout_height="57dp"
-        android:layout_marginEnd="148dp"
-        android:layout_marginBottom="760dp"
-        android:text="@string/saving_tip"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/contentTip"
-        android:layout_width="357dp"
-        android:layout_height="77dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:text="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nos"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/savingTipID" />
+    android:layout_height="wrap_content"
+    android:background="#E5E5E5">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="413dp"
-        android:layout_height="637dp"
-        android:layout_marginTop="36dp"
-        android:background="@drawable/slide_rounded_rectangle_white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contentTip">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:context=".savingTips">
 
-        <TableLayout
-            android:layout_width="413dp"
-            android:layout_height="512dp"
+        <TextView
+            android:id="@+id/savingTipID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="560dp"
+            android:text="@string/saving_tip"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.168" />
+
+        <TextView
+            android:id="@+id/contentTip"
+            android:layout_width="357dp"
+            android:layout_height="77dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:text="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nos"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/savingTipID" />
 
-            <TableRow
-                android:id="@+id/RowInvest"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="413dp"
+            android:layout_height="637dp"
+            android:layout_marginTop="36dp"
+            android:background="@drawable/slide_rounded_rectangle_white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/contentTip">
 
-                <LinearLayout
+            <TableLayout
+                android:layout_width="413dp"
+                android:layout_height="512dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TableRow
+                    android:id="@+id/RowInvest"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20sp"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent">
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:background="@drawable/rounded_rectangle_green">
-
-                        <ImageView
-                            android:id="@+id/circle1"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:layout_margin="8dp"
-                            android:src="@drawable/circle_white"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <ImageView
-                            android:id="@+id/iconinvest"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:src="@drawable/icon_investment2"
-                            app:layout_constraintBottom_toBottomOf="@+id/circle1"
-                            app:layout_constraintEnd_toEndOf="@+id/circle1"
-                            app:layout_constraintStart_toStartOf="@+id/circle1"
-                            app:layout_constraintTop_toTopOf="@+id/circle1" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <TextView
-                        android:id="@+id/investment_text"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Investment"
-                        android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textSize="18sp" />
-                </LinearLayout>
-            </TableRow>
+                        android:layout_margin="20sp"
+                        android:orientation="vertical">
 
-            <TableRow
-                android:id="@+id/RowEmergency"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:background="@drawable/rounded_rectangle_green">
 
-                <LinearLayout
+                            <ImageView
+                                android:id="@+id/circle1"
+                                android:layout_width="90dp"
+                                android:layout_height="90dp"
+                                android:layout_margin="8dp"
+                                android:src="@drawable/circle_white"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <ImageView
+                                android:id="@+id/iconinvest"
+                                android:layout_width="80dp"
+                                android:layout_height="80dp"
+                                android:src="@drawable/icon_investment2"
+                                app:layout_constraintBottom_toBottomOf="@+id/circle1"
+                                app:layout_constraintEnd_toEndOf="@+id/circle1"
+                                app:layout_constraintStart_toStartOf="@+id/circle1"
+                                app:layout_constraintTop_toTopOf="@+id/circle1" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <TextView
+                            android:id="@+id/investment_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Investment"
+                            android:textAlignment="center"
+                            android:textColor="@color/black"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+                </TableRow>
+
+                <TableRow
+                    android:id="@+id/RowEmergency"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20sp"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent">
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:background="@drawable/rounded_rectangle_green">
-
-                        <ImageView
-                            android:id="@+id/circle2"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:layout_margin="8dp"
-                            android:src="@drawable/circle_white"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <ImageView
-                            android:id="@+id/iconemergency"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:src="@drawable/icon_emergency"
-                            app:layout_constraintBottom_toBottomOf="@+id/circle2"
-                            app:layout_constraintEnd_toEndOf="@+id/circle2"
-                            app:layout_constraintStart_toStartOf="@+id/circle2"
-                            app:layout_constraintTop_toTopOf="@+id/circle2" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <TextView
-                        android:id="@+id/emergencytext"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Emergency"
-                        android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textSize="18sp" />
-                </LinearLayout>
-            </TableRow>
+                        android:layout_margin="20sp"
+                        android:orientation="vertical">
 
-            <TableRow
-                android:id="@+id/RowDonation"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:background="@drawable/rounded_rectangle_green">
 
-                <LinearLayout
+                            <ImageView
+                                android:id="@+id/circle2"
+                                android:layout_width="90dp"
+                                android:layout_height="90dp"
+                                android:layout_margin="8dp"
+                                android:src="@drawable/circle_white"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <ImageView
+                                android:id="@+id/iconemergency"
+                                android:layout_width="80dp"
+                                android:layout_height="80dp"
+                                android:src="@drawable/icon_emergency"
+                                app:layout_constraintBottom_toBottomOf="@+id/circle2"
+                                app:layout_constraintEnd_toEndOf="@+id/circle2"
+                                app:layout_constraintStart_toStartOf="@+id/circle2"
+                                app:layout_constraintTop_toTopOf="@+id/circle2" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <TextView
+                            android:id="@+id/emergencytext"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Emergency"
+                            android:textAlignment="center"
+                            android:textColor="@color/black"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+                </TableRow>
+
+                <TableRow
+                    android:id="@+id/RowDonation"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20sp"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent">
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:background="@drawable/rounded_rectangle_green">
-
-                        <ImageView
-                            android:id="@+id/circle3"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:layout_margin="8dp"
-                            android:src="@drawable/circle_white"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <ImageView
-                            android:id="@+id/icondonation"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:src="@drawable/icon_donation"
-                            app:layout_constraintBottom_toBottomOf="@+id/circle3"
-                            app:layout_constraintEnd_toEndOf="@+id/circle3"
-                            app:layout_constraintStart_toStartOf="@+id/circle3"
-                            app:layout_constraintTop_toTopOf="@+id/circle3" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <TextView
-                        android:id="@+id/donationtext"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Donation"
-                        android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textSize="18sp" />
-                </LinearLayout>
-            </TableRow>
+                        android:layout_margin="20sp"
+                        android:orientation="vertical">
 
-        </TableLayout>
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:background="@drawable/rounded_rectangle_green">
+
+                            <ImageView
+                                android:id="@+id/circle3"
+                                android:layout_width="90dp"
+                                android:layout_height="90dp"
+                                android:layout_margin="8dp"
+                                android:src="@drawable/circle_white"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <ImageView
+                                android:id="@+id/icondonation"
+                                android:layout_width="80dp"
+                                android:layout_height="80dp"
+                                android:src="@drawable/icon_donation"
+                                app:layout_constraintBottom_toBottomOf="@+id/circle3"
+                                app:layout_constraintEnd_toEndOf="@+id/circle3"
+                                app:layout_constraintStart_toStartOf="@+id/circle3"
+                                app:layout_constraintTop_toTopOf="@+id/circle3" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <TextView
+                            android:id="@+id/donationtext"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Donation"
+                            android:textAlignment="center"
+                            android:textColor="@color/black"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+                </TableRow>
+
+            </TableLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
